@@ -1,5 +1,7 @@
 08-09-2019
  - This time I REALLY fixed issue #1 by rewriting the radio logic
+ - Removed crash catcher because it's annoying me
+ - AGAIN fixed encoding errors (Should be fine now)
 
 06-09-2019
  - Fixed issue #1 (Double entries conflict).
